--- a/css/styles.css
+++ b/css/styles.css
@@ -33,13 +33,22 @@ a:hover {
     src: url('../fonts/ProximaNova-Bold.eot') format('eot'), url('../fonts/ProximaNova-Bold.woff') format('woff'), url('../fonts/ProximaNova-Bold.ttf') format('ttf');
 }
 
+@font-face {
+    font-family: 'FontAwesome';
+    src: url('../fonts/fontawesome-webfont.eot?v=4.7.0');
+    src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 header {
     color: #000;
     font-size: 30px;
-    padding: 20px 0;
     background: rgba(255, 255, 255, 0.9);
     border-bottom: 1px solid #e3e3e3;
     text-align: center;
+    height: 60px;
+    margin-top: 15px;
 }
 
 header img {
@@ -50,28 +59,83 @@ header h1 {
     margin: 0;
     text-transform: uppercase;
     font-size: 30px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+header a {
+    vertical-align: middle;
+    display: inline-block;
+    float: left;
 }
 
 .wrapper {
     max-width: 1260px;
     margin: 0 auto;
+    width: 95%;
 }
 
 footer {
     font-size: 30px;
-    padding: 20px;
+    padding: 20px 0;
     background: #f6f6f6;
-    text-align: center;
     color: #000;
     position: fixed;
     bottom: 0;
     width: 100%;
+    background-color: #1e1e1e;
+    display: table;
 }
 
-footer p {
+footer p,
+.footer-right .company-address {
     color: #444;
     font-size: 15px;
+}
+
+.footer-left,
+.footer-right {
+    display: table-cell;
+    vertical-align: middle;
+    width: 50%;
+}
+
+.footer-right {
+    text-align: right;
+    line-height: 22px;
+}
+
+.footer-right .all-locations {
+    border: 2px solid #fff;
+    margin: 20px 0;
+    line-height: 11px;
+    padding: 10px 7px;
+    cursor: pointer;
+    font-size: 14px;
+    text-transform: capitalize;
+    color: #fff;
+    width: 110px;
     text-align: center;
-    width: 65%;
-    margin: auto;
+    float: right;
+}
+
+.footer-right .all-locations:hover {
+    background-color: #e2292f;
+    text-decoration: none;
+}
+
+.footer-right .company-address {
+    color: #bbb;
+    line-height: 0;
+}
+
+.location {
+    text-align: right;
+}
+
+.contact {
+    color: #fff;
+    font-family: "ProximaNova-Bold";
+    font-size: 18px;
+    margin-top: 4px;
 }
