--- a/css/design.css
+++ b/css/design.css
@@ -44,32 +44,25 @@ a:hover {
     font-style: normal;
 }
 
+/* Header */
+
 header {
-    color: #000;
     font-size: 30px;
     background: rgba(255, 255, 255, 0.9);
     border-bottom: 1px solid #e3e3e3;
     text-align: center;
-    height: 60px;
-    margin-top: 15px;
+    height: 75px;
 }
 
 header img {
     float: left;
 }
 
-header h1 {
-    margin: 0;
-    text-transform: uppercase;
-    font-size: 30px;
-    display: inline-block;
-    vertical-align: middle;
-}
-
 header a {
     vertical-align: middle;
     display: inline-block;
     float: left;
+    margin-top: 12px;
 }
 
 .wrapper {
@@ -78,6 +71,7 @@ header a {
     width: 95%;
 }
 
+/* Footer */
 footer {
     font-size: 30px;
     padding: 20px 0;
@@ -221,6 +215,17 @@ footer p,
     font-size: 11px;
 }
 
+/* Home page */
+
+.design-wrap h1 {
+    text-align: center;
+    font-size: 28px;
+    color: #e2292f;
+    font-weight: bold;
+}
+
+/* Responsive styles */
+
 @media (max-width: 767px) {
     .footer-left,
     .footer-right {
@@ -237,5 +242,15 @@ footer p,
     }
     .social-icons a {
         margin: 10px 3% 7px;
+    }
+}
+
+@media (max-width: 480px) {
+    header img {
+        width: 75px;
+        height: 39px;
+    }
+    .design-wrap h1 {
+        font-size: 25px;
     }
 }
