--- a/css/design.css
+++ b/css/design.css
@@ -44,6 +44,17 @@ a:hover {
     font-style: normal;
 }
 
+#wrap {
+    min-height: 95.6%;
+    height: auto;
+    margin: 0 auto -51px;
+    padding-bottom: 51px;
+    position: relative;
+}
+
+#page {
+    height: 100%;
+}
 /* Header */
 
 header {
@@ -77,7 +88,6 @@ footer {
     padding: 20px 0;
     background: #f6f6f6;
     color: #000;
-    position: fixed;
     bottom: 0;
     width: 100%;
     background-color: #1e1e1e;
