--- a/css/design.css
+++ b/css/design.css
@@ -44,6 +44,7 @@ a:hover {
     font-style: normal;
 }
 
+
 /* Header */
 
 header {
@@ -71,7 +72,9 @@ header a {
     width: 95%;
 }
 
+
 /* Footer */
+
 footer {
     font-size: 30px;
     padding: 20px 0;
@@ -81,7 +84,13 @@ footer {
     bottom: 0;
     width: 100%;
     background-color: #1e1e1e;
-    display: table;
+}
+
+.footer-wrapper {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
 }
 
 footer p,
@@ -90,21 +99,9 @@ footer p,
     font-size: 15px;
 }
 
-.footer-left {
-    padding: 70px 0;
-}
-
-.footer-left,
-.footer-right {
-    display: inline-block;
-    vertical-align: middle;
-}
-
 .footer-right {
     text-align: right;
     line-height: 22px;
-    float: right;
-    padding: 20px 0;
 }
 
 .footer-right .all-locations {
@@ -215,6 +212,7 @@ footer p,
     font-size: 11px;
 }
 
+
 /* Home page */
 
 .design-wrap h1 {
@@ -224,15 +222,10 @@ footer p,
     font-weight: bold;
 }
 
+
 /* Responsive styles */
 
 @media (max-width: 767px) {
-    .footer-left,
-    .footer-right {
-        width: 100%;
-        text-align: center;
-        padding: 0;
-    }
     .footer-right .all-locations {
         margin-top: 10px;
         margin-bottom: 0;
@@ -242,6 +235,14 @@ footer p,
     }
     .social-icons a {
         margin: 10px 3% 7px;
+    }
+    .footer-wrapper {
+        flex-direction: column;
+        align-items: stretch;
+    }
+    .footer-left,
+    .footer-right {
+        text-align: center;
     }
 }
 
