--- a/css/design.css
+++ b/css/design.css
@@ -267,8 +267,13 @@ footer p,
     font-size: 16px;
 }
 
+.design-image {
+    text-align: center;
+}
+
 .design-image img {
     width: 100%;
+    max-width: 1260px;
 }
 
 
