--- a/css/design.css
+++ b/css/design.css
@@ -248,7 +248,7 @@ footer p,
 .design-block {
     text-align: center;
     margin: 20px;
-    width: 200px;
+    min-width: 200px;
 }
 
 .design-block h2 {
